[package]
authors = ["Zelda Hessler <zelda.hessler@tempus.com>"]
edition = "2018"
name = "bishop-art"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.20.1"
itertools = "*"
md5 = "0.7.0"
rand = "0.8.3"
thiserror = "1.0.23"
